current_errors_v2.txt
install
+- install neural-network-training
   +- compile exe neural-network-training Debug native 2 errors
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib\std\Io\Writer.zig:1371:21: error: cannot format slice without a specifier (i.e. {s}, {x}, {b64}, or {any})
                    @compileError("cannot format slice without a specifier (i.e. {s}, {x}, {b64}, or {any})");
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    printValue__anon_45789: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib\std\Io\Writer.zig:1355:59
    print__anon_43194: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib\std\Io\Writer.zig:702:25
    6 reference(s) hidden; use '-freference-trace=8' to see all references
lib\features\ai\layers.zig:267:61: error: root source file struct 'time' has no member named 'milliTimestamp'
    var prng = std.Random.DefaultPrng.init(@intCast(std.time.milliTimestamp()));
                                                    ~~~~~~~~^~~~~~~~~~~~~~~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib\std\time.zig:1:1: note: struct declared here
const std = @import("std.zig");
^~~~~
error: 2 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1484+d0ba6642b\\zig.exe" build-exe -ODebug --dep abi "-Mroot=C:\\Users\\donald\\abi\\examples\\neural_network_training.zig" -ODebug --dep build_options --dep accelerator "-Mabi=C:\\Users\\donald\\abi\\lib\\mod.zig" "-Mbuild_options=.zig-cache\\c\\3a7d921129c2b66941febb189f7b7809\\options.zig" -ODebug --dep build_options "-Maccelerator=C:\\Users\\donald\\abi\\lib\\accelerator\\mod.zig" --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name neural-network-training --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1484+d0ba6642b\\lib\\" --listen=-

Build Summary: 3/6 steps succeeded (1 failed)
install transitive failure
+- install neural-network-training transitive failure
   +- compile exe neural-network-training Debug native 2 errors

error: the following build command failed with exit code 1:
.zig-cache\o\e7d3b383645b36a759d62def9104e25e\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib C:\Users\donald\abi .zig-cache C:\Users\donald\AppData\Local\zig --seed 0x23db40e9 -Z8fd47825b438fb8b
